# MA-CityOS-Global-Mesh

./: Dockerfile  app.py  city_config.json  city_swarm.yml  consolidator.py  guardian_daemon.py  main.py  mayor_report.py  mesh_booster.py  pyproject.toml  requirements.txt  seed.sh  start_city.sh  swarm_orchestrator.py  test_genai.py
.github/workflows/: city_swarm.yml
.streamlit/: config.toml
agents_swarm/: DataAnalyzer.py  DirectoryManager.py
city_data/: global_radar.json  global_status.json  news_feed.json  skills_map.json  web_data_20260416132138.txt
city_data/NewDistrict/: description.txt
macity_vault/: Prefeitura.md  architect_plans.md
macity_vault/Logs/: interactions_2026-04-16.md
macity_vault/memorias/: Mineracao_2026_01.md
src/agents/: architect.py  architect_agent.py  architect_coder.py  cli_master.py  cyber_shield.py  expansion_swarm.py  free_brain.py  galactic_miner.py  global_monitor.py  integration_agent.py  mayor.py  mayor_task_manager.py  minerador_de_dados_local_swarm.py  openclaude_bridge.py  resilience_agent.py  self_healing.py  stalking_infinito.py
src/core/: METAKARNEL.SOUL  almathea.py  bus.py  cognitive_swarm.py  digital_twin.py  global_bus.py  guardian.py  heartbeat.py  kernel.py  memory.py  metabuilder.py  ouroboros.py  p2p_bus.py  p2p_network.py  process_manager.py  shadow_exec.py  soul.py  sys_kernel.py  sys_telemetry.py
src/core/factory/: brain.py  refactor.py  spawner.py
src/core/kali_engine/: kali_compiler.py  swarm_ray.py  uhl_parser.py
(+1 files in other folders)
